# libusb-rs

./: Cargo.toml  README.md
examples/: _read_device.rs  libusb_info.rs  list_devices.rs  read_device.rs  read_device_async.rs  read_device_sync.rs
examples/read_device/: async.rs  inner.rs  sync.rs
src/: context.rs  device.rs  device_handle.rs  device_handle_api.rs  device_handle_sync_api.rs  device_list.rs  error.rs  io.rs  lib.rs  ref_type.rs
