[package]
name = "libusb"
version = "0.3.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/dcuddeback/libusb-rs"
repository = "https://github.com/dcuddeback/libusb-rs.git"
documentation = "http://dcuddeback.github.io/libusb-rs/libusb/"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]

[dependencies]
log = "0.4.1"
bit-set = "0.4"
# libusb-sys = "0.2.3"
libusb-sys = { path = "../libusb-sys" }
libc = "0.2"
mio = "0.6"

[dev-dependencies]
env_logger = "*"
