[package]
name = "libusb"
version = "0.3.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust library for accessing USB devices."
license = "MIT"
homepage = "https://github.com/dcuddeback/libusb-rs"
repository = "https://github.com/dcuddeback/libusb-rs.git"
documentation = "http://dcuddeback.github.io/libusb-rs/libusb/"
readme = "README.md"
keywords = ["usb", "libusb", "hardware", "bindings"]

[dependencies]
log = "0.4.1"
bit-set = "0.4"
# libusb-sys = "0.2.3"
libusb-sys = { path = "../libusb-sys" }
libc = "0.2"
mio = "0.6"

[[example]]
name = "read_device_sync"
path = "examples/read_device/sync.rs"

[[example]]
name = "read_device_async"
path = "examples/read_device/async.rs"

[[example]]
name = "libusb_info"
path = "examples/libusb_info.rs"

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[dev-dependencies]
env_logger = "*"
